# rodent

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
benchmarks/: bench.sh  benchmark.py  benchmark_aila.py  fix_results_arm.py  gen_formulas.py  gen_table.py  profile.sh  results.txt  results_aila.txt  results_arm_par.txt  results_par.txt
benchmarks/scenes/: generate.sh
cmake/test/: run_rodent.cmake  run_traversal.cmake
refs/: CMakeLists.txt
refs/cmake/modules/: FindEmbree.cmake  FindISPC.cmake  FindOptiX.cmake
refs/src/: CMakeLists.txt  bench_shading.cpp  bench_shading.h  bench_shading.ispc  color.h  common.h  common.isph  embree_path_tracer.cpp  embree_path_tracer.h  embree_path_tracer.ispc  file_path.h  float2.h  float3.h  image.cpp  image.h  math.isph  obj.cpp  obj.h  optix_path_tracer.cpp  optix_path_tracer.cu  optix_path_tracer.h
src/: CMakeLists.txt  camera.impala  common.impala  constants.impala  cpuid.c  cpuid.cpp  dummy_main.impala  main.impala  random.impala  scene.impala  settings.impala  triangle_mesh.impala  vector.impala
src/bvh/: build.impala
src/core/: color.impala  common.impala  cpu_common.impala  image.impala  matrix.impala  random.impala  sort.impala  task_manager.impala  vector.impala
src/driver/: bbox.h  buffer.h  bvh.h  common.h  converter.cpp  driver.cpp  embree_bvh.h  float4.h  image.cpp  image.h  interface.cpp  interface.h  interface_cpu.cpp  load_obj.cpp  load_obj.h  obj.cpp  obj.h  tri.h
src/driver/formats/: load_obj.cpp  load_obj.h  load_png.cpp  load_png.h
src/render/: camera.impala  color.impala  device.impala  driver.impala  film.impala  geometry.impala  image.impala  integrator.impala  light.impala  mapping_cpu.impala  mapping_gpu.impala  material.impala  ray_queue.impala  ray_scheduler.impala  renderer.impala  scene.impala  utils.impala
src/render/device/: device.impala  film.impala
src/render/integrators/: integrator.impala
src/render/scene/: camera.impala  light.impala  material.impala  scene.impala
src/traversal/: bbox.impala  bvh.impala  frontend.impala  intersection.impala  mapping_cpu.impala  mapping_gpu.impala  ray.impala  ray_layout.impala  stack.impala  traversal.impala
src/traversal/frontend/: frontend.cpp  load_bvh.h  load_rays.h  traversal.h
testing/: cornell_box.mtl
tools/: CMakeLists.txt  bvh_extractor.cpp  file_path.h  load_obj.cpp  load_obj.h
tools/bench_aila/: CMakeLists.txt  CudaTracerKernels.hpp  bench_aila.cpp  kepler_dynamic_fetch.cu
tools/bench_embree/: CMakeLists.txt  bench_embree.cpp
tools/bench_interface/: CMakeLists.txt  bench_interface.cpp  bench_interface.impala
tools/bench_shading/: CMakeLists.txt  bench_shading.cpp  bench_shading.impala
tools/bench_traversal/: CMakeLists.txt  bench_traversal.cpp  bench_traversal.impala
tools/bvh_extractor/: CMakeLists.txt  bvh_extractor.cpp  bvh_helper.h  extract_bvh2.cpp  extract_bvh4.cpp  extract_bvh4_8.cpp  sbvh_builder.h
tools/common/: bbox.h  float2.h  float3.h  load_bvh.h  load_rays.h
tools/fbuf2png/: CMakeLists.txt  fbuf2png.cpp
tools/ray_gen/: CMakeLists.txt  ray_gen.cpp
